Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2017-01-31 16:48:00 -0500
  - Explicitly require Perl 5.14.
  - Require Alien::Build 0.02 in generated code

0.02      2017-01-31 13:31:35 -0500
  - Added documentation
  - Require Alien::Build 0.02

0.01      2017-01-30 22:32:38 -0500
  - initial version