@@ -1,7 +1,15 @@
 #!/bin/sh
 
-git clone --depth 2 https://github.com/plicease/Alien-Build.git /tmp/AlienBuild
-cd /tmp/AlienBuild
+git clone --depth 2 https://github.com/plicease/Alien-Build.git /tmp/Alien-Build
+cd /tmp/Alien-Build
+
+dzil authordeps --missing | cpanm -n
+dzil listdeps   --missing | cpanm -n
+
+dzil install
+
+git clone --depth 2 https://github.com/plicease/Alien-Build-MB.git /tmp/Alien-Build-MB
+cd /tmp/Alien-Build-MB
 
 dzil authordeps --missing | cpanm -n
 dzil listdeps   --missing | cpanm -n
